# priceagent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  build-and-deploy.sh  deploy.sh  deploy_to_prod.sh  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  run.sh  start.sh
.claude/commands/: instrument-otel.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
infra/: README.md  docker-compose.logging.yml
infra/loki/: loki-config.yml
scripts/: extract_all_contacts.py  extract_trace_contacts.py  update_contacts.py  update_seller_contacts.py  update_seller_phones.py  update_traces_contacts.py
src/: main.py
src/agents/: __init__.py  contact_discovery.py  negotiator.py  orchestrator.py  product_discovery.py  product_matching.py  product_research.py
src/api/: middleware.py
src/bridge/: whatsapp_client.py
src/cache/: __init__.py  decorators.py  manager.py  versioning.py
src/config/: settings.py
src/db/: __init__.py  base.py  criteria_store.py  models.py  session.py
src/logging/: __init__.py
src/observability/: __init__.py  hooks.py  models.py  store.py
src/state/: __init__.py  models.py  store.py
src/tools/: aggregation.py  approval_tool.py  whatsapp_tool.py
tests/: conftest.py  record_cassettes.py
tests/e2e/: test_product_search.py  test_zap_aggregation.py
tests/unit/: __init__.py  test_agent_routes.py  test_aggregation.py  test_alm_scraper.py  test_cache.py  test_criteria_store.py  (+8 more)
whatsapp_bridge/: package-lock.json  package.json
(+92 files in other folders)
